Fixed header squishing in the theme editor

--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -328,6 +328,7 @@ dialog {
 
     header {
         top: 0;
+        min-height: 33px;
         
         font-weight: 500;
         font-size: 15pt;
